# kcverify

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  preprocess.sh  setup.sh
asset/: 艦船図鑑_データ用.csv  装備図鑑_データ用.csv
assets/: mst_slotitem_bonus.json
assets/api_mst_ship/: api_mst_ship.json
assets/api_mst_slotitem/: api_mst_slotitem.json
assets/fit_bonuses/: fit_bonuses.json
include/: common.hpp  concepts.hpp  exit.hpp  inplace_vector.hpp  numeric.hpp  optional.hpp  ranges.hpp  type_traits.hpp
include/battlelog/: basic_ship.hpp  battlelog.hpp  ship_prefix.hpp  slot_iterator.hpp  slotdata.hpp
include/constants/: equipment.hpp  ship.hpp
include/csv/: document.hpp  field.hpp  impl.hpp  row.hpp
include/damage_formula/: equipment_level_bonuses.hpp
include/damage_formula/modifier/: air_attack.hpp  composition.hpp  critical.hpp  floor.hpp  floor_if.hpp  liner.hpp  proficiency.hpp  pt.hpp  softcap.hpp
include/fit_bonuses/: fit_bonuses.hpp
include/json/: read_json.hpp
include/kcapi/api_start2/: api_mst_ship.hpp  api_mst_slotitem.hpp
include/kcapi/data/: equipment_id_name.hpp  ship_id_name.hpp
include/kcapi/types/: api_air_base_attack.hpp  api_air_base_injection.hpp  api_air_fire.hpp  api_airsearch.hpp  api_basic.hpp  api_cell_data.hpp  api_cell_flavor.hpp  api_deck_port.hpp  api_e_deck_info.hpp  api_enemy_info.hpp  api_escape.hpp  api_event_object.hpp  api_eventmap.hpp  api_hougeki.hpp  (+32 more)
include/meta/: category.hpp  ctype.hpp  equipments.hpp  icon.hpp  nationality.hpp  ships.hpp  stype.hpp
include/optional/: optional.hpp
include/sortie/: air_base.hpp  air_base_squadron.hpp  equipment.hpp  fleet.hpp  fleet_data.hpp  map_data.hpp  ship.hpp  slot.hpp  sortie_api.hpp  sortie_data.hpp
include/sortie_data/: air_base.hpp  air_base_squadron.hpp  equipment.hpp  fleet.hpp  fleet_data.hpp  map_data.hpp  ship.hpp  slot.hpp  sortie_data.hpp
libkcv/: CMakeLists.txt  attributes.hpp  exception.hpp  inplace_vector.hpp  optional.hpp  ranges.hpp  stdfloat.hpp  type_traits.hpp  utility.hpp
libkcv/core/: equipment_bonus.cpp  equipment_bonus.hpp  interval.hpp
libkcv/extensions/: attributes.hpp  formatter.hpp  inplace_vector.hpp  optional.hpp  type_traits.hpp
source/: common.cpp  main.cpp  read_json.cpp
test/: CMakeLists.txt  read_and_write_json.hpp  root.hpp
test/constants/: equipment.cpp  ship.cpp
test/damage_formula/: modifier.cpp
test/eoen/fit_bonus/: fit_bonus.cpp  fit_bonuses.json
test/eoen/fit_bonus/sortie_record/0/: deckbuilder.json  sortie_record.json
test/eoen/fit_bonus/sortie_record/1/: deckbuilder.json  sortie_record.json
test/eoen/sortie_detail/: sortie_detail.cpp
test/eoen/sortie_record/: sortie_record.cpp
test/kcapi/api_req_battle_midnight/battle/: response.cpp
test/kcapi/api_req_map/start/: request.cpp  request.json  response.cpp
test/kcapi/api_req_sortie/battle/: response.cpp  response.json
test/kcapi/api_req_sortie/battleresult/: response.cpp
test/kcapi/api_start2/: api_mst_ship.cpp  api_mst_slotitem.cpp
test/kcsapi/api_get_member/ship_deck/: response.cpp
test/kcsapi/api_get_member/ship_deck/response/: ship_deck.json
test/kcsapi/api_req_battle_midnight/battle/: response.cpp
test/kcsapi/api_req_battle_midnight/battle/response/: response.json
test/kcsapi/api_req_map/next/: response.cpp
test/kcsapi/api_req_map/next/response/: response.json
test/kcsapi/api_req_map/start/: request.cpp  response.cpp
test/kcsapi/api_req_map/start/response/: response.json
test/kcsapi/api_req_sortie/battle/: response.cpp
test/kcsapi/api_req_sortie/battleresult/: response.cpp
test/kcsapi/api_req_sortie/battleresult/response/: response.json
test/kcsapi/api_start2/: api_mst_ship.cpp  api_mst_slotitem.cpp
test/libkcv/core/constants/: ship.cpp
test/libkcv/core/damage_formula/function/: function.cpp
test/libkcv/core/damage_formula/functions/: functions.cpp  inverse.cpp
test/libkcv/core/equipment_bonus/: eoen.cpp  kc3kai.cpp
test/libkcv/core/equipment_bonus/eoen/data/2025-01-01/: deckbuilder.json  sortie_record.json
test/libkcv/core/equipment_bonus/eoen/data/2025-04-15/: expected.json  sortie_record.json
test/libkcv/core/sortie/equipment_bonus/: eoen.cpp  kc3kai.cpp
test/libkcv/models/eoen/: fit_bonus.cpp  sortie_record.cpp
test/libkcv/models/eoen/sortie_record/data/: 2024-09-07.json
test/libkcv/models/kcsapi/api_get_member/ship_deck/: response.cpp
test/libkcv/models/kcsapi/api_get_member/ship_deck/data/response/: 2024-09-07.json
test/libkcv/models/kcsapi/api_port/port/: response.cpp
test/libkcv/models/kcsapi/api_req_battle_midnight/battle/: response.cpp
test/libkcv/models/kcsapi/api_req_battle_midnight/battle/data/response/: 2024-09-07.json
test/libkcv/models/kcsapi/api_req_map/next/: response.cpp
test/libkcv/models/kcsapi/api_req_map/next/data/response/: 2024-08-20T11:38:13.5004216.json  2024-08-20T11:39:09.3600851.json  2024-08-20T11:42:33.0255676.json  2024-08-20T11:45:31.8693294.json
test/libkcv/models/kcsapi/api_req_map/start/: request.cpp  response.cpp
test/libkcv/models/kcsapi/api_req_map/start/data/response/: 2024-08-20T11:41:25.3935554.json  2024-09-07T05:29:23.9435909.json
test/libkcv/models/kcsapi/api_req_sortie/battle/: response.cpp
test/libkcv/models/kcsapi/api_req_sortie/battle/data/response/: 2024-08-20T11:38:27.6675335.json  2024-08-20T11:41:46.0013289.json  2024-08-20T11:44:25.4707099.json  2024-08-20T11:45:57.5241353.json
test/libkcv/models/kcsapi/api_req_sortie/battleresult/: response.cpp
test/libkcv/models/kcsapi/api_req_sortie/battleresult/data/response/: 2024-08-16T12:18:24.9833321.json  2024-08-20T11:38:51.7872435.json  2024-08-20T11:39:52.7721781.json  2024-09-07T05:30:47.2169611.json  2024-09-07T05:35:38.2887189.json
test/libkcv/models/kcsapi/api_start2/: api_mst_ship.cpp  api_mst_slotitem.cpp
test/libkcv/models/kcsapi/api_start2/data/api_mst_slotitem/: 2025-02-28.json
test/sortie/: api_mst_ship.json  sortie.cpp
test/sortie_data/: sortie_data.cpp
tools/: CMakeLists.txt  gen_equipment.hpp.inc.cpp  gen_ship.hpp.inc.cpp
(+255 files in other folders)
